--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -3,17 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginVertical="8dp"
+    android:background="#dddddd">
 
     <TextView
         android:id="@+id/comment_text_textView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
         android:text="TextView"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/comment_user_textView"
         app:layout_constraintTop_toBottomOf="@+id/comment_user_textView" />
 
@@ -21,10 +26,10 @@
         android:id="@+id/date_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/comment_like_image"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -35,4 +40,32 @@
         android:text="TextView"
         app:layout_constraintStart_toStartOf="@+id/date_textView"
         app:layout_constraintTop_toBottomOf="@+id/date_textView" />
+
+    <ImageView
+        android:id="@+id/comment_like_image"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/baseline_arrow_drop_up_24" />
+
+    <ImageView
+        android:id="@+id/comment_dislike_image"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:layout_constraintEnd_toEndOf="@+id/comment_like_image"
+        app:layout_constraintStart_toStartOf="@+id/comment_like_image"
+        app:layout_constraintTop_toBottomOf="@+id/likes_count_textView"
+        app:srcCompat="@drawable/baseline_arrow_drop_down_24" />
+
+    <TextView
+        android:id="@+id/likes_count_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        app:layout_constraintEnd_toEndOf="@+id/comment_like_image"
+        app:layout_constraintStart_toStartOf="@+id/comment_like_image"
+        app:layout_constraintTop_toBottomOf="@+id/comment_like_image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
